// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/openapi/openapi Body parameters should succeed with an object with all types 1`] = `
{
  "info": {
    "contact": {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": {
    "/test": {
      "patch": {
        "description": "Test endpoint",
        "operationId": "id",
        "requestBody": {
          "content": {
            "application/json": {
              "example": {
                "password": "*******",
                "username": "johndoe@acme.com",
              },
              "schema": {
                "description": "Full body description.",
                "properties": {
                  "array": {
                    "description": "Parameter without description.",
                    "items": {
                      "description": "Parameter without description.",
                      "type": "string",
                    },
                    "type": "array",
                  },
                  "arrayOfObjects": {
                    "description": "Parameter without description.",
                    "items": {
                      "description": "Parameter without description.",
                      "properties": {
                        "internalString": {
                          "description": "Parameter without description.",
                          "type": "string",
                        },
                      },
                      "type": "object",
                    },
                    "type": "array",
                  },
                  "boolean": {
                    "description": "Parameter without description.",
                    "type": "boolean",
                  },
                  "date": {
                    "description": "Parameter without description. (min:10 chars, max:25 chars, date:yyyy-mm-dd)",
                    "format": "date",
                    "type": "string",
                  },
                  "dateTime": {
                    "description": "Parameter without description. (max:25 chars, ISO8601 date-time format)",
                    "format": "date-time",
                    "type": "string",
                  },
                  "integer": {
                    "description": "Parameter without description.",
                    "format": "int64",
                    "type": "integer",
                  },
                  "number": {
                    "description": "Parameter without description.",
                    "format": "double",
                    "type": "number",
                  },
                  "object": {
                    "description": "Parameter without description.",
                    "properties": {
                      "internalString": {
                        "description": "Parameter without description.",
                        "type": "string",
                      },
                    },
                    "type": "object",
                  },
                  "string": {
                    "description": "Username",
                    "type": "string",
                  },
                },
                "type": "object",
              },
            },
          },
          "description": "Full body description.",
        },
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": [
          "Internals",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "https://server.com",
    },
  ],
}
`;

exports[`src/openapi/openapi Body parameters should succeed with an object, without description 1`] = `
{
  "info": {
    "contact": {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": {
    "/test": {
      "patch": {
        "description": "Test endpoint",
        "operationId": "id",
        "requestBody": {
          "content": {
            "application/json": {
              "example": {
                "password": "*******",
                "username": "johndoe@acme.com",
              },
              "schema": {
                "description": "Parameter without description.",
                "properties": {
                  "password": {
                    "description": "User password",
                    "format": "password",
                    "type": "string",
                  },
                  "username": {
                    "description": "Username",
                    "type": "string",
                  },
                },
                "type": "object",
              },
            },
          },
          "description": "Body does not have a description.",
        },
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": [
          "Internals",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "https://server.com",
    },
  ],
}
`;
